--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/runtime": "^7.26.9",
-    "@bacons/apple-targets": "^3.0.2",
+    "@bacons/apple-targets": "^4.0.0",
     "@better-auth/expo": "^1.3.34",
     "@expo/metro-runtime": "~6.1.1",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -44,39 +44,39 @@
     "expo-symbols": "^1.0.6",
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-css-interop": "^0.1.22",
+    "leaflet": "^1.9.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-native": "^0.81.5",
+    "react-native-css-interop": "^0.2.1",
     "react-native-edge-to-edge": "^1.7.0",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-reanimated": "4.1",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-url-polyfill": "^2.0.0",
+    "react-native-screens": "^4.16.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.1",
-    "react-native-webview": "^13.15.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-webview": "^13.16.0",
+    "react-native-worklets": "^0.5.1",
     "react-router-dom": "^7.1.3",
     "workbox-cli": "^7.3.0",
     "workbox-precaching": "^7.3.0",
-    "workbox-webpack-plugin": "^7.3.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.19.0",
     "@types/leaflet": "^1.9.0",
-    "@types/react": "~19.1.12",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@types/react": "^19.1.10",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.14.0",
+    "globals": "^17.3.0",
     "typescript": "^5.9.3",
     "webpack-cli": "^6.0.1"
   },
