Update Android tabs, accessibility and theming
Migrate Android tab implementation from unstable NativeTabs to expo-router Tabs and use IconSymbol for tab icons; configure tabBar colors, styles, and accessibility labels. In Home screen derive a theme from the color scheme, use theme.primary for the compose icon, increase its size, and add accessibility props (label, hint, role) and proper hook deps. Disable edgeToEdge in app.json, remove SystemBars usage and make StatusBar non-translucent in root layout. Adjust PostCard accessibility attributes to avoid hiding descendants and ensure components use the theme card/border colors. These changes improve accessibility, theme consistency, and modernize tab usage on Android.

--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
         "foregroundImage": "./assets/images/natively-dark.png",
         "backgroundColor": "#000000"
       },
-      "edgeToEdgeEnabled": true,
+      "edgeToEdgeEnabled": false,
       "package": "com.anonymous.Natively"
     },
     "web": {
