Refactor layout, theming and auth to fix critical bugs
Testing unify platform tab implementation and tidy up theming and OAuth logic. Removed platform-specific tab files and FloatingTabBar-based layout in favor of a single expo-router Tabs layout in hopes it fixes some of the bugs with the UI, (uses useTheme + IconSymbol). Updated color usage to read from colors.light / colors.dark and adjusted several components (Home, ConnectMastodon, FloatingTabBar, ListItem, HeaderButtons) to use the new props and theme values. Exposed SCOPES and getRedirectUri in the Mastodon OAuth module, switched connect flow to use getRedirectUri, and added debug logging. Removed WidgetContext and its provider, declared __DEV__ in ErrorBoundary, and fixed platform checks in ListItem. Add EAS/project config and owner to app.json, tweak eas.json and metro.config (disable unstable package exports), and update package.json deps (add expo-dev-client, bump react/react-dom, remove @bacons/apple-targets). Small UX/implementation tweaks: replace Alert calls with console logs, adjust icons and tab labels, and other minor cleanup. Now the Android app can successfully build and launch without crashing or failing to authenticate.

--- a/app.json
+++ b/app.json
@@ -36,13 +36,13 @@
       "expo-router",
       "expo-web-browser"
     ],
-    "scheme": "Thrive",
+    "scheme": "thrive",
     "intentFilters": [
       {
         "action": "VIEW",
         "data": [
           {
-            "scheme": "Thrive",
+            "scheme": "thrive",
             "host": "mastodon-callback"
           }
         ],
@@ -56,7 +56,11 @@
       "typedRoutes": true
     },
     "extra": {
-      "router": {}
-    }
+      "router": {},
+      "eas": {
+        "projectId": "9d5728ff-39cf-4a13-b2c9-ee060e515a37"
+      }
+    },
+    "owner": "alexchapman"
   }
 }
