--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/runtime": "^7.26.9",
-    "@bacons/apple-targets": "^4.0.0",
     "@better-auth/expo": "^1.3.34",
     "@expo/metro-runtime": "~6.1.1",
     "@expo/ngrok": "^4.1.3",
@@ -30,6 +29,7 @@
     "expo": "~54.0.1",
     "expo-blur": "^15.0.6",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "^14.0.7",
     "expo-glass-effect": "^0.1.1",
     "expo-haptics": "^15.0.6",
@@ -45,8 +45,8 @@
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
     "leaflet": "^1.9.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.4",
+    "react-dom": "19.1.4",
     "react-leaflet": "^5.0.0",
     "react-native": "^0.81.5",
     "react-native-css-interop": "^0.2.1",
