Add pagination, optimize PostCard rendering
Implement infinite-scroll pagination and list optimizations on the Home timeline: add loadingMore/hasMore states, onEndReached handler, footer loader, refresh handler, memoized FlatList helpers, and performance props (removeClippedSubviews, maxToRenderPerBatch, windowSize, initialNumToRender). Refactor PostCard into a memoized, stateless component (use props for state) with useCallback handlers and a custom props comparator to avoid unnecessary re-renders. Move optimistic update logic to Home (useCallback) and clean up console logs. Add Expo updates configuration (runtimeVersion + updates.url) in app.json, add preview channel to eas.json, and add expo-updates dependency in package.json.

--- a/app.json
+++ b/app.json
@@ -62,6 +62,12 @@
         "projectId": "9d5728ff-39cf-4a13-b2c9-ee060e515a37"
       }
     },
-    "owner": "alexchapman"
+    "owner": "alexchapman",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/9d5728ff-39cf-4a13-b2c9-ee060e515a37"
+    }
   }
 }
