Add post view, media uploads & audio support
Introduce a full post detail screen and end-to-end media handling: add Post detail route with thread context, optimistic interaction handlers, and error UI. Implement media upload flow and playback: new uploadFormData client helper, media endpoint, media mappers and types updates, MediaPlayer component for video/audio playback, and AudioRecorder component for recording. Enhance ComposeModal to attach images, videos and audio (picker, document, recorder), show previews, and send media IDs with posts. Update PostCard to render media with MediaPlayer and enable navigation to post view. Add app.config for variant bundle ids/names, update app.json and eas.json for APP_VARIANT env, change versioning in package scripts to reflect the early stage of development and add required Expo deps (expo-av, expo-document-picker), and export media helpers from lib/mastodon. Overall this enables attaching/uploading/playing media and viewing individual posts and their context.

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Thrive",
     "slug": "Thrive",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/natively-dark.png",
     "userInterfaceStyle": "automatic",
@@ -14,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.Natively",
+      "bundleIdentifier": "com.galaxia.thrive",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -25,7 +25,7 @@
         "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": false,
-      "package": "com.anonymous.Natively"
+      "package": "com.galaxia.thrive"
     },
     "web": {
       "favicon": "./assets/images/final_quest_240x240.png",
